--- a/composer.json
+++ b/composer.json
@@ -20,15 +20,15 @@
 	
     "require": {
         "php": "^7.4 || ^8",
-        "platine-php/logger": "1.0.x-dev"
+        "platine-php/lang": "1.0.x-dev"
     },
 	
     "require-dev": {
         "phpmd/phpmd": "@stable",
-        "phpunit/phpunit": "^9",
-        "platine-php/test-tools": "1.0.x-dev",
+        "phpunit/phpunit": "^9.5",
+        "platine-php/dev": "1.0.x-dev",
         "squizlabs/php_codesniffer": "3.*",
-        "vimeo/psalm": "4.x-dev"
+        "phpstan/phpstan": "0.12.x-dev"
     },
     
     "autoload": {
@@ -50,16 +50,20 @@
     "extra": {
         "branch-alias": {
             "dev-develop": "1.0.x-dev"
+        },
+        "platine": {
+            "lang": ["lang/"]
         }
     },
 
     "scripts": {
         "test": "phpunit --colors=always",
-        "static": "psalm",
+        "static": "phpstan analyze",
         "check": "phpcs",
         "check-fix": "phpcbf",
         "analyze": "phpmd src xml phpmd.xml"
     },
 	
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
