Update composer config

--- a/composer.json
+++ b/composer.json
@@ -53,8 +53,7 @@
         },
         "platine": {
             "lang": [
-                "lang/en_US",
-                "lang/fr_FR"
+                "lang/"
             ]
         }
     },
