--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         {
             "name": "NGUEREZA Tony",
             "email": "nguerezatony@gmail.com",
-            "homepage": "http://www.iacademy.cf",
+            "homepage": "https://www.platine-php.com",
             "role": "developer"
         }
     ],
@@ -28,7 +28,7 @@
         "phpunit/phpunit": "^9.5",
         "platine-php/dev": "1.0.x-dev",
         "squizlabs/php_codesniffer": "3.*",
-        "phpstan/phpstan": "0.12.x-dev"
+        "phpstan/phpstan": "^1.8"
     },
     
     "autoload": {
@@ -66,6 +66,6 @@
         "analyze": "phpmd src xml phpmd.xml"
     },
 	
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
