--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,13 @@
 	
     "require": {
         "php": "^7.4 || ^8",
-        "platine-php/lang": "1.0.x-dev"
+        "platine-php/lang": "^1.0"
     },
 	
     "require-dev": {
         "phpmd/phpmd": "@stable",
         "phpunit/phpunit": "^9.5",
-        "platine-php/dev": "1.0.x-dev",
+        "platine-php/dev": "^1.0",
         "squizlabs/php_codesniffer": "3.*",
         "phpstan/phpstan": "^1.8"
     },
@@ -49,7 +49,7 @@
     
     "extra": {
         "branch-alias": {
-            "dev-develop": "1.0.x-dev"
+            "dev-develop": "^1.0"
         },
         "platine": {
             "lang": [
