Update PHP minimum version to 8.0 and dependencies to latest compatible version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php-versions }}
+        ini-file: development
         extensions: intl, fileinfo, xdebug, zip, gettext #optional
         ini-values: "post_max_size=256M, xdebug.mode=coverage" #optional
     - name: Check PHP Version
